crates/analyzer/tests/snapshots/errors__invalid_struct_attribute.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: Invalid attribute
  ┌─ compile_errors/invalid_struct_attribute.fe:2:5
  │
2 │     #invalid
  │     ^^^^^^^^ illegal name. Only `indexed` supported.


